RESOLVED FIXED 250783
[GTK][WPE] Fix compilation with ENABLE_WEBGL=OFF
https://bugs.webkit.org/show_bug.cgi?id=250783
Summary [GTK][WPE] Fix compilation with ENABLE_WEBGL=OFF
Alejandro G. Castro
Reported 2023-01-18 12:38:45 PST
There are a couple of code sections that are not guarded in this case.
Attachments
Alejandro G. Castro
Comment 1 2023-01-18 12:52:32 PST
EWS
Comment 2 2023-01-18 22:21:54 PST
Committed 259065@main (7014a00d589b): <https://commits.webkit.org/259065@main> Reviewed commits have been landed. Closing PR #8788 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.