Cherry-pick 259065@main (7014a00d589b). https://bugs.webkit.org/show_bug.cgi?id=250783

[GTK][WPE] Fix compilation with  ENABLE_WEBGL=OFF
    https://bugs.webkit.org/show_bug.cgi?id=250783

    Reviewed by Adrian Perez de Castro.

    Add guards to a couple of code sections that depend on WebGL
    functions.

    * Source/WebCore/Modules/mediastream/CanvasCaptureMediaStreamTrack.cpp:
    (WebCore::CanvasCaptureMediaStreamTrack::Source::canvasChanged):
    * Source/WebKit/UIProcess/API/glib/WebKitProtocolHandler.cpp:

    Canonical link: https://commits.webkit.org/259065@main